--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <div class="home" id="Home">
             <h1>Everyday Korean Language</h1>
             <p class="p1">Learning Korean Language by taking an online Korean class could benefit anyone by increasing their understanding of the culture. The best online Korean Language Class that is consisting 4 lessons: reading, writing, listening, and speaking is Everyday Korean Language.</p>
-            <center><img src="/web_statis/images/kor1.jpeg" width="250px" height="250px">
-                <img src="/web_statis/images/kor2.jpeg" width="250px" height="250px">
-                <img src="/web_statis/images/kor3.jpeg" width="250px" height="250px">
-                <img src="/web_statis/images/kor4.jpeg" width="250px" height="250px"></center>
+            <center><img src="/web_statis/img/kor1.jpeg" width="250px" height="250px">
+                <img src="/web_statis/img/kor2.jpeg" width="250px" height="250px">
+                <img src="/web_statis/img/kor3.jpeg" width="250px" height="250px">
+                <img src="/web_statis/img/kor4.jpeg" width="250px" height="250px"></center>
             
             <h2>Trial</h2>
             <div class="artikelClass" artikel_week="pertama">
@@ -223,10 +223,10 @@
         <!--Gallery Section Start-->
         <div class="gallery" id="Gallery">
             <h2>Gallery</h2>
-            <center><img src="/web_statis/images/stu1.jpeg" width="250px" height="250px">
-                <img src="/web_statis/images/stu2.jpeg" width="250px" height="250px">
-                <img src="/web_statis/images/stu3.jpeg" width="250px" height="250px">
-                <img src="/web_statis/images/stu4.jpeg" width="250px" height="250px"></center>
+            <center><img src="/web_statis/img/stu1.jpeg" width="250px" height="250px">
+                <img src="/web_statis/img/stu2.jpeg" width="250px" height="250px">
+                <img src="/web_statis/img/stu3.jpeg" width="250px" height="250px">
+                <img src="/web_statis/img/stu4.jpeg" width="250px" height="250px"></center>
         </div>
         <!--Gallery Section End-->
     
