--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Everyday Korean Language</title>
 
-    <link rel="icon" href="images/logoeveryday.jpeg">
+    <link rel="icon" href="img/logoeveryday.jpeg">
 	<link rel="stylesheet" href="EverydayKoreanLanguage.css">
     <script src="EverydayJS.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -57,10 +57,10 @@
         <div class="home" id="Home">
             <h1>Everyday Korean Language</h1>
             <p class="p1">Learning Korean Language by taking an online Korean class could benefit anyone by increasing their understanding of the culture. The best online Korean Language Class that is consisting 4 lessons: reading, writing, listening, and speaking is Everyday Korean Language.</p>
-            <center><img src="kor1.jpeg" width="250px" height="250px">
-                <img src="kor2.jpeg" width="250px" height="250px">
-                <img src="kor3.jpeg" width="250px" height="250px">
-                <img src="kor4.jpeg" width="250px" height="250px"></center>
+            <center><img src="img/kor1.jpeg" width="250px" height="250px">
+                <img src="img/kor2.jpeg" width="250px" height="250px">
+                <img src="img/kor3.jpeg" width="250px" height="250px">
+                <img src="img/kor4.jpeg" width="250px" height="250px"></center>
             
             <h2>Trial</h2>
             <div class="artikelClass" artikel_week="pertama">
