--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
         <!--Gallery Section Start-->
         <div class="gallery" id="Gallery">
             <h2>Gallery</h2>
-            <center><img src="/web_statis/img/stu1.jpeg" width="250px" height="250px">
-                <img src="/web_statis/img/stu2.jpeg" width="250px" height="250px">
-                <img src="/web_statis/img/stu3.jpeg" width="250px" height="250px">
-                <img src="/web_statis/img/stu4.jpeg" width="250px" height="250px"></center>
+            <center><img src="img/stu1.jpeg" width="250px" height="250px">
+                <img src="img/stu2.jpeg" width="250px" height="250px">
+                <img src="img/stu3.jpeg" width="250px" height="250px">
+                <img src="img/stu4.jpeg" width="250px" height="250px"></center>
         </div>
         <!--Gallery Section End-->
     
