--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   
 </head>
 <body>
-       <!-- <script>
+        <script>
         alert("Annyeong! Selamat datang di Everyday Korean Language");
-        </script> -->
+        </script> 
     
     <!--Header Start-->
     <div class="content">
@@ -298,7 +298,7 @@
         <!--Footer Section Start-->
         <div class="footer">
         <footer>
-	    <h1>Copyright: Aura Banit Tiyasasahyafiah<br>Design by: Aura Banit Tiyasasahyafiah<br>Link:</h1></footer>
+	    <h1>Copyright: Aura Banit Tiyasasahyafiah<br>Design by: Aura Banit Tiyasasahyafiah<br>Link: https://aoera.github.io/</h1></footer>
         </div>
 
 
